# English

./: .gitignore
AlKo/: CMakeLists.txt  global.qss  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  speech_recognition.py
AlKo/grammar/: grammartest.cpp  grammartest.h
AlKo/level/: leveltest.cpp  leveltest.h
AlKo/listening/: listeningtest.cpp  listeningtest.h
AlKo/main/: finalresult.cpp  finalresult.h
AlKo/speaking/: speakingtest.cpp  speakingtest.h
AlKo/speaking/ffmpeg/ffmpeg-2025-05-15-git-12b853530a-full_build/: README.txt
AlKo/styles/: style.qss
AlKo/writing/: writingtest.cpp  writingtest.h
AlKo/writing/hunspell/dictionaries/: description.xml
